kubernetes/150-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: log-cache
spec:
  selector:
    app: log-cache
  ports:
  - protocol: TCP
    port: 8081
