kubernetes/175-syslog-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: log-cache-ingress
  namespace: pas-system
spec:
  selector:
    app: log-cache
  ports:
  - protocol: TCP
    port: 8082
