kubernetes/300-log-cache-virualservice.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: log-cache-external-virtual-service
  namespace: pas-system
spec:
  gateways:
  - pas-system/istio-ingressgateway
  hosts:
  - log-cache.sys.poway.cf-app.com
  http:
  - route:
    - destination:
        host: log-cache.pas-system.svc.cluster.local
        port:
          number: 8081
